--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,7 @@
 name: Nathan Griffin, Powershell Noob
 markdown: kramdown
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme
 
 permalink: /blog/:title
